<resources>
    <string name="app_name">Tecnologias Moviles</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="welcome">Bienvenido usuario</string>
    <string name="product_list">Product List</string>
    <string name="id_product">ID Producto</string>
    <string name="name_product">Nombre Producto</string>
    <string name="price_product">Precio Producto</string>
    <string name="test_acelerometer">Test Acelerometer</string>
    <string name="exists_acelerometer">Exists Acelerometer</string>
    <string name="start">INICIAR</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="enter">ENTRAR</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>