<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/txtIdProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_product"
        android:textSize="24dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtNameProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_product"
        android:textSize="24dp"
        android:layout_below="@+id/txtIdProduct"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_product"
        android:textSize="24dp"
        android:layout_below="@+id/txtNameProduct"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPriceProduct"
        android:layout_centerHorizontal="true"
        android:text="AGREGAR AL CARRITO"/>

</RelativeLayout>