<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        tools:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:background="@color/primary_logo"
        android:textColor="@color/secondary_logo"/>

    <TextView
        android:id="@+id/txtRecoveryPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password_recovery"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Registar usuario"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>


</LinearLayout>