<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="Datos del usuario"
        android:textSize="30dp"/>

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"/>

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/imgUser"
        android:layout_marginTop="20dp"
        android:text="@string/user"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtUser"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/btnChangePwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        android:layout_marginTop="20dp"
        android:text="CAMBIAR CONTRASEÑA"/>

</androidx.constraintlayout.widget.ConstraintLayout>